--- a/ResNet/h5file_manipulation.ipynb
+++ b/ResNet/h5file_manipulation.ipynb
@@ -21,526 +21,69 @@
    "outputs": [],
    "source": [
     "root_dir = os.getcwd()\n",
-    "filepath = os.path.join(root_dir, \"mask_rcnn_prostate_pretrained.h5\")"
+    "pre_t_filepath = os.path.join(root_dir, \"mask_rcnn_prostate_pretrained.h5\")\n",
+    "resnet_filepath = os.path.join(root_dir, \"logs/prostate20180227T2229/mask_rcnn_prostate_0040.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "f = h5py.File(filepath, mode='r')"
+    "def combine_tumor_classifier(pre_t_filepath, resnet_filepath):\n",
+    "    \"\"\"This function combine the pretrained maskrcnn weights with the tumor classifier weights.\n",
+    "    Function copy the tumor head from resnet file to pretrained file and save in the pretrained\n",
+    "    file.\n",
+    "    # Arguments\n",
+    "    pre_t_filepath: specify the file location of the pretrained maskrcnn\n",
+    "    resnet_filepath: specify the file location of the trained tumor classifier head\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # read in the file\n",
+    "    pre_t_f = h5py.File(pre_t_filepath, mode='r+')\n",
+    "    resnet_f = h5py.File(resnet_filepath, mode='r')\n",
+    "    \n",
+    "    # delete all the tumor weights in the pre_t_f\n",
+    "    for name in pre_t_f:\n",
+    "        if name.startswith('tumor'):\n",
+    "            del pre_t_f[name]\n",
+    "    \n",
+    "    # copy the tumor head from resnet_f to pre_t_f\n",
+    "    for name in resnet_f:\n",
+    "        if name.startswith('tumor'):\n",
+    "            resnet_f.copy('tumor_class_conv1', pre_t_f)\n",
+    "    \n",
+    "    pre_t_f.close()\n",
+    "    resnet_f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Attributes of HDF5 object at 139928697420264> KeysView(<HDF5 file \"mask_rcnn_prostate_pretrained.h5\" (mode r)>)\n",
-      "/\n",
-      "ROI\n",
-      "activation_1\n",
-      "activation_10\n",
-      "activation_11\n",
-      "activation_12\n",
-      "activation_13\n",
-      "activation_14\n",
-      "activation_15\n",
-      "activation_16\n",
-      "activation_17\n",
-      "activation_18\n",
-      "activation_19\n",
-      "activation_2\n",
-      "activation_20\n",
-      "activation_21\n",
-      "activation_22\n",
-      "activation_23\n",
-      "activation_24\n",
-      "activation_25\n",
-      "activation_26\n",
-      "activation_27\n",
-      "activation_28\n",
-      "activation_29\n",
-      "activation_3\n",
-      "activation_30\n",
-      "activation_31\n",
-      "activation_32\n",
-      "activation_33\n",
-      "activation_34\n",
-      "activation_35\n",
-      "activation_36\n",
-      "activation_37\n",
-      "activation_38\n",
-      "activation_39\n",
-      "activation_4\n",
-      "activation_40\n",
-      "activation_41\n",
-      "activation_42\n",
-      "activation_43\n",
-      "activation_44\n",
-      "activation_45\n",
-      "activation_46\n",
-      "activation_47\n",
-      "activation_48\n",
-      "activation_49\n",
-      "activation_5\n",
-      "activation_50\n",
-      "activation_51\n",
-      "activation_52\n",
-      "activation_53\n",
-      "activation_54\n",
-      "activation_55\n",
-      "activation_56\n",
-      "activation_57\n",
-      "activation_58\n",
-      "activation_59\n",
-      "activation_6\n",
-      "activation_60\n",
-      "activation_61\n",
-      "activation_62\n",
-      "activation_63\n",
-      "activation_64\n",
-      "activation_65\n",
-      "activation_66\n",
-      "activation_67\n",
-      "activation_68\n",
-      "activation_69\n",
-      "activation_7\n",
-      "activation_70\n",
-      "activation_71\n",
-      "activation_73\n",
-      "activation_74\n",
-      "activation_75\n",
-      "activation_76\n",
-      "activation_8\n",
-      "activation_9\n",
-      "add_1\n",
-      "add_10\n",
-      "add_11\n",
-      "add_12\n",
-      "add_13\n",
-      "add_14\n",
-      "add_15\n",
-      "add_16\n",
-      "add_17\n",
-      "add_18\n",
-      "add_19\n",
-      "add_2\n",
-      "add_20\n",
-      "add_21\n",
-      "add_22\n",
-      "add_23\n",
-      "add_24\n",
-      "add_25\n",
-      "add_26\n",
-      "add_27\n",
-      "add_28\n",
-      "add_29\n",
-      "add_3\n",
-      "add_30\n",
-      "add_31\n",
-      "add_32\n",
-      "add_33\n",
-      "add_4\n",
-      "add_5\n",
-      "add_6\n",
-      "add_7\n",
-      "add_8\n",
-      "add_9\n",
-      "bn2a_branch1\n",
-      "bn2a_branch2a\n",
-      "bn2a_branch2b\n",
-      "bn2a_branch2c\n",
-      "bn2b_branch2a\n",
-      "bn2b_branch2b\n",
-      "bn2b_branch2c\n",
-      "bn2c_branch2a\n",
-      "bn2c_branch2b\n",
-      "bn2c_branch2c\n",
-      "bn3a_branch1\n",
-      "bn3a_branch2a\n",
-      "bn3a_branch2b\n",
-      "bn3a_branch2c\n",
-      "bn3b_branch2a\n",
-      "bn3b_branch2b\n",
-      "bn3b_branch2c\n",
-      "bn3c_branch2a\n",
-      "bn3c_branch2b\n",
-      "bn3c_branch2c\n",
-      "bn3d_branch2a\n",
-      "bn3d_branch2b\n",
-      "bn3d_branch2c\n",
-      "bn4a_branch1\n",
-      "bn4a_branch2a\n",
-      "bn4a_branch2b\n",
-      "bn4a_branch2c\n",
-      "bn4b_branch2a\n",
-      "bn4b_branch2b\n",
-      "bn4b_branch2c\n",
-      "bn4c_branch2a\n",
-      "bn4c_branch2b\n",
-      "bn4c_branch2c\n",
-      "bn4d_branch2a\n",
-      "bn4d_branch2b\n",
-      "bn4d_branch2c\n",
-      "bn4e_branch2a\n",
-      "bn4e_branch2b\n",
-      "bn4e_branch2c\n",
-      "bn4f_branch2a\n",
-      "bn4f_branch2b\n",
-      "bn4f_branch2c\n",
-      "bn4g_branch2a\n",
-      "bn4g_branch2b\n",
-      "bn4g_branch2c\n",
-      "bn4h_branch2a\n",
-      "bn4h_branch2b\n",
-      "bn4h_branch2c\n",
-      "bn4i_branch2a\n",
-      "bn4i_branch2b\n",
-      "bn4i_branch2c\n",
-      "bn4j_branch2a\n",
-      "bn4j_branch2b\n",
-      "bn4j_branch2c\n",
-      "bn4k_branch2a\n",
-      "bn4k_branch2b\n",
-      "bn4k_branch2c\n",
-      "bn4l_branch2a\n",
-      "bn4l_branch2b\n",
-      "bn4l_branch2c\n",
-      "bn4m_branch2a\n",
-      "bn4m_branch2b\n",
-      "bn4m_branch2c\n",
-      "bn4n_branch2a\n",
-      "bn4n_branch2b\n",
-      "bn4n_branch2c\n",
-      "bn4o_branch2a\n",
-      "bn4o_branch2b\n",
-      "bn4o_branch2c\n",
-      "bn4p_branch2a\n",
-      "bn4p_branch2b\n",
-      "bn4p_branch2c\n",
-      "bn4q_branch2a\n",
-      "bn4q_branch2b\n",
-      "bn4q_branch2c\n",
-      "bn4r_branch2a\n",
-      "bn4r_branch2b\n",
-      "bn4r_branch2c\n",
-      "bn4s_branch2a\n",
-      "bn4s_branch2b\n",
-      "bn4s_branch2c\n",
-      "bn4t_branch2a\n",
-      "bn4t_branch2b\n",
-      "bn4t_branch2c\n",
-      "bn4u_branch2a\n",
-      "bn4u_branch2b\n",
-      "bn4u_branch2c\n",
-      "bn4v_branch2a\n",
-      "bn4v_branch2b\n",
-      "bn4v_branch2c\n",
-      "bn4w_branch2a\n",
-      "bn4w_branch2b\n",
-      "bn4w_branch2c\n",
-      "bn5a_branch1\n",
-      "bn5a_branch2a\n",
-      "bn5a_branch2b\n",
-      "bn5a_branch2c\n",
-      "bn5b_branch2a\n",
-      "bn5b_branch2b\n",
-      "bn5b_branch2c\n",
-      "bn5c_branch2a\n",
-      "bn5c_branch2b\n",
-      "bn5c_branch2c\n",
-      "bn_conv1\n",
-      "conv1\n",
-      "fpn_c2p2\n",
-      "fpn_c3p3\n",
-      "fpn_c4p4\n",
-      "fpn_c5p5\n",
-      "fpn_p2\n",
-      "fpn_p2add\n",
-      "fpn_p3\n",
-      "fpn_p3add\n",
-      "fpn_p3upsampled\n",
-      "fpn_p4\n",
-      "fpn_p4add\n",
-      "fpn_p4upsampled\n",
-      "fpn_p5\n",
-      "fpn_p5upsampled\n",
-      "fpn_p6\n",
-      "input_gt_boxes\n",
-      "input_gt_class_ids\n",
-      "input_gt_masks\n",
-      "input_image\n",
-      "input_image_meta\n",
-      "input_rpn_bbox\n",
-      "input_rpn_match\n",
-      "lambda_1\n",
-      "lambda_2\n",
-      "lambda_3\n",
-      "lambda_6\n",
-      "max_pooling2d_1\n",
-      "mrcnn_bbox\n",
-      "mrcnn_bbox_fc\n",
-      "mrcnn_bbox_loss\n",
-      "mrcnn_class\n",
-      "mrcnn_class_bn1\n",
-      "mrcnn_class_bn2\n",
-      "mrcnn_class_conv1\n",
-      "mrcnn_class_conv2\n",
-      "mrcnn_class_logits\n",
-      "mrcnn_class_loss\n",
-      "mrcnn_mask\n",
-      "mrcnn_mask_bn1\n",
-      "mrcnn_mask_bn2\n",
-      "mrcnn_mask_bn3\n",
-      "mrcnn_mask_bn4\n",
-      "mrcnn_mask_conv1\n",
-      "mrcnn_mask_conv2\n",
-      "mrcnn_mask_conv3\n",
-      "mrcnn_mask_conv4\n",
-      "mrcnn_mask_deconv\n",
-      "mrcnn_mask_loss\n",
-      "output_rois\n",
-      "pool_squeeze\n",
-      "proposal_targets\n",
-      "res2a_branch1\n",
-      "res2a_branch2a\n",
-      "res2a_branch2b\n",
-      "res2a_branch2c\n",
-      "res2a_out\n",
-      "res2b_branch2a\n",
-      "res2b_branch2b\n",
-      "res2b_branch2c\n",
-      "res2b_out\n",
-      "res2c_branch2a\n",
-      "res2c_branch2b\n",
-      "res2c_branch2c\n",
-      "res2c_out\n",
-      "res3a_branch1\n",
-      "res3a_branch2a\n",
-      "res3a_branch2b\n",
-      "res3a_branch2c\n",
-      "res3a_out\n",
-      "res3b_branch2a\n",
-      "res3b_branch2b\n",
-      "res3b_branch2c\n",
-      "res3b_out\n",
-      "res3c_branch2a\n",
-      "res3c_branch2b\n",
-      "res3c_branch2c\n",
-      "res3c_out\n",
-      "res3d_branch2a\n",
-      "res3d_branch2b\n",
-      "res3d_branch2c\n",
-      "res3d_out\n",
-      "res4a_branch1\n",
-      "res4a_branch2a\n",
-      "res4a_branch2b\n",
-      "res4a_branch2c\n",
-      "res4a_out\n",
-      "res4b_branch2a\n",
-      "res4b_branch2b\n",
-      "res4b_branch2c\n",
-      "res4b_out\n",
-      "res4c_branch2a\n",
-      "res4c_branch2b\n",
-      "res4c_branch2c\n",
-      "res4c_out\n",
-      "res4d_branch2a\n",
-      "res4d_branch2b\n",
-      "res4d_branch2c\n",
-      "res4d_out\n",
-      "res4e_branch2a\n",
-      "res4e_branch2b\n",
-      "res4e_branch2c\n",
-      "res4e_out\n",
-      "res4f_branch2a\n",
-      "res4f_branch2b\n",
-      "res4f_branch2c\n",
-      "res4f_out\n",
-      "res4g_branch2a\n",
-      "res4g_branch2b\n",
-      "res4g_branch2c\n",
-      "res4g_out\n",
-      "res4h_branch2a\n",
-      "res4h_branch2b\n",
-      "res4h_branch2c\n",
-      "res4h_out\n",
-      "res4i_branch2a\n",
-      "res4i_branch2b\n",
-      "res4i_branch2c\n",
-      "res4i_out\n",
-      "res4j_branch2a\n",
-      "res4j_branch2b\n",
-      "res4j_branch2c\n",
-      "res4j_out\n",
-      "res4k_branch2a\n",
-      "res4k_branch2b\n",
-      "res4k_branch2c\n",
-      "res4k_out\n",
-      "res4l_branch2a\n",
-      "res4l_branch2b\n",
-      "res4l_branch2c\n",
-      "res4l_out\n",
-      "res4m_branch2a\n",
-      "res4m_branch2b\n",
-      "res4m_branch2c\n",
-      "res4m_out\n",
-      "res4n_branch2a\n",
-      "res4n_branch2b\n",
-      "res4n_branch2c\n",
-      "res4n_out\n",
-      "res4o_branch2a\n",
-      "res4o_branch2b\n",
-      "res4o_branch2c\n",
-      "res4o_out\n",
-      "res4p_branch2a\n",
-      "res4p_branch2b\n",
-      "res4p_branch2c\n",
-      "res4p_out\n",
-      "res4q_branch2a\n",
-      "res4q_branch2b\n",
-      "res4q_branch2c\n",
-      "res4q_out\n",
-      "res4r_branch2a\n",
-      "res4r_branch2b\n",
-      "res4r_branch2c\n",
-      "res4r_out\n",
-      "res4s_branch2a\n",
-      "res4s_branch2b\n",
-      "res4s_branch2c\n",
-      "res4s_out\n",
-      "res4t_branch2a\n",
-      "res4t_branch2b\n",
-      "res4t_branch2c\n",
-      "res4t_out\n",
-      "res4u_branch2a\n",
-      "res4u_branch2b\n",
-      "res4u_branch2c\n",
-      "res4u_out\n",
-      "res4v_branch2a\n",
-      "res4v_branch2b\n",
-      "res4v_branch2c\n",
-      "res4v_out\n",
-      "res4w_branch2a\n",
-      "res4w_branch2b\n",
-      "res4w_branch2c\n",
-      "res4w_out\n",
-      "res5a_branch1\n",
-      "res5a_branch2a\n",
-      "res5a_branch2b\n",
-      "res5a_branch2c\n",
-      "res5a_out\n",
-      "res5b_branch2a\n",
-      "res5b_branch2b\n",
-      "res5b_branch2c\n",
-      "res5b_out\n",
-      "res5c_branch2a\n",
-      "res5c_branch2b\n",
-      "res5c_branch2c\n",
-      "res5c_out\n",
-      "roi_align_classifier\n",
-      "roi_align_mask\n",
-      "rpn_bbox\n",
-      "rpn_bbox_loss\n",
-      "rpn_class\n",
-      "rpn_class_logits\n",
-      "rpn_class_loss\n",
-      "rpn_model\n",
-      "tumor_class_bn1\n",
-      "tumor_class_bn2\n",
-      "tumor_class_conv1\n",
-      "tumor_class_conv2\n",
-      "tumor_class_dense\n",
-      "tumor_class_dropout\n",
-      "tumor_class_flatten\n",
-      "tumor_class_logits\n",
-      "tumor_class_loss\n",
-      "zero_padding2d_1\n"
+     "ename": "ValueError",
+     "evalue": "Destination object already exists (Destination object already exists)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-69e349ca1dd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcombine_tumor_classifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpre_t_filepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresnet_filepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-335d9c1b5b7c>\u001b[0m in \u001b[0;36mcombine_tumor_classifier\u001b[0;34m(pre_t_filepath, resnet_filepath)\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresnet_f\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tumor'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m             \u001b[0mresnet_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tumor_class_conv1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpre_t_f\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mpre_t_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/wenyuan/anaconda/lib/python3.6/site-packages/h5py/_hl/group.py\u001b[0m in \u001b[0;36mcopy\u001b[0;34m(self, source, dest, name, shallow, expand_soft, expand_external, expand_refs, without_attrs)\u001b[0m\n\u001b[1;32m    391\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m             h5o.copy(source.id, self._e(source_path), dest.id, self._e(dest_path),\n\u001b[0;32m--> 393\u001b[0;31m                      copypl, base.dlcpl)\n\u001b[0m\u001b[1;32m    394\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    395\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper (/Users/ilan/minonda/conda-bld/h5py_1490026758621/work/h5py/_objects.c:2846)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper (/Users/ilan/minonda/conda-bld/h5py_1490026758621/work/h5py/_objects.c:2804)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/h5o.pyx\u001b[0m in \u001b[0;36mh5py.h5o.copy (/Users/ilan/minonda/conda-bld/h5py_1490026758621/work/h5py/h5o.c:4067)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Destination object already exists (Destination object already exists)"
      ]
     }
    ],
    "source": [
-    "print(f.attrs, f.keys())\n",
-    "print(f.name)\n",
-    "for name in f:\n",
-    "    print(name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dataset1 = f['res5b_out']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "weight_names\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for name in dataset1:\n",
-    "    print(name)\n",
-    "\n",
-    "for att in dataset1.attrs:\n",
-    "    print(att)\n",
-    "\n",
-    "m = dataset1.attrs['weight_names']\n",
-    "print(m)\n",
-    "# print(dataset1.name)\n",
-    "# dataset2 = dataset1['tumor_class_dense']\n",
-    "# print(dataset2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bias:0\n",
-      "kernel:0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for name in dataset2:\n",
-    "    print(name)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for att in dataset2.attrs:\n",
-    "    print(att)"
+    "combine_tumor_classifier(pre_t_filepath, resnet_filepath)"
    ]
   },
   {
@@ -550,7 +93,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# method to fetch the numpy data array from the h5 dataset object\n",
+    "# weight_pre = kenel_pre[()]"
+   ]
   }
  ],
  "metadata": {
@@ -569,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
